# MPRPC

./: CMakeLists.txt  MPRPC.code-workspace  README.md
example/: CMakeLists.txt  friend.proto  user.proto
example/callee/GetFriendsLists/: CMakeLists.txt  friendservice.cc
example/callee/Login/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt
example/caller/GetFriendsLists/: CMakeLists.txt  callfriendservice.cc
example/caller/Login/: CMakeLists.txt  calluserservice.cc
mprpc/: CMakeLists.txt
mprpc/include/mprpc/: MprpcApplication.h  MprpcChannel.h  MprpcConfig.h  MprpcController.h  friend.pb.h  rpcprovider.h  user.pb.h
mprpc/src/: MprpcApplication.cc  MprpcChannel.cc  MprpcConfig.cc  MprpcController.cc  RpcProvider.cc  friend.pb.cc  rpcheader.pb.cc  user.pb.cc
mylogger/: CMakeLists.txt
mylogger/include/mylogger/: AsyncLogging.h  Buffer.h  CurrentThread.h  FileUtil.h  LogFile.h  LogStream.h  Logger.h  Thread.h  Timestamp.h  noncopyable.h
mylogger/src/: AsyncLogging.cc  Buffer.cc  CurrentThread.cc  FileUtil.cc  LogFile.cc  LogStream.cc  Logger.cc  Thread.cc  Timestamp.cc
mylogger/test/: CMakeLists.txt  LogFileTest.cc
mymuduo/: CMakeLists.txt
mymuduo/include/mymuduo/: Acceptor.h  Channel.h  EventLoop.h  Logger.h  Timer.h  TimerId.h  Timestamp.h
mymuduo/src/: EpollPoller.cc  EventLoop.cc  EventLoopThreadPool.cc  Logger.cc  TcpConnection.cc  TimerQueue.cc  Timestamp.cc
